# Timetable_Scheduling

./: CMakeLists.txt  Dockerfile  README.md
include/: Assignment.h  BruteForceScheduler.h  BruteForceUniversity.h  Course.h  DummyScheduler.h  IScheduler.h  Instructor.h  Menu.h  SchedulerContext.h  TimeSlot.h  TimeTable.h  Timer.h  University.h
resources/: sample1.json  sample2.json  sample3.json  sample4.json  sample5.json
scripts/: build.sh  docker_run.sh
source/: Assignment.cpp  BruteForceScheduler.cpp  BruteForceUniversity.cpp  Course.cpp  DummyScheduler.cpp  Instructor.cpp  Menu.cpp  TimeSlot.cpp  TimeTable.cpp  University.cpp  main.cpp
test/: CMakeLists.txt  ExampleTests.h
test/resources/: testData1.json  testData10.json  testData2.json  testData3.json  testData4.json  testData5.json  testData6.json  testData7.json  testData8.json
test/source/: ExampleTests.cpp  testBruteForceScheduler.cpp  testDummyScheduler.cpp
